--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
-        <title>React Component as Functions</title>
+        <title>React Component as Function</title>
     <link rel="shortcut icon" href="/public/4geeks.ico"></head>
     <body>
         <div id="app"></div>
